kubernetes/media/navidrome/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ports:
    - port: 4533
      protocol: TCP
      targetPort: http-tcp
  selector:
    app: navidrome
  type: ClusterIP
