kubernetes/media/navidrome/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`navidrome.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: navidrome
          port: 4533
  tls:
    secretName: navidrome-certificate
